pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError7.pkl
foo: Listing = new { 1; 2; 3 }
bar: Listing<String> = (foo) { "bar" }
